--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</li>
 								<li class="mb-3"><a href="https://codepen.io/denihida1216"><span class="fa-container text-center mr-2"><i
 												class="fab fa-codepen fa-fw"></i></span>codepen.io/denihida1216</a></li>
-								<li><a href="https://denihida1216.github.io"><span class="fa-container text-center mr-2"><i
+								<li><a href="https://denihida1216.github.io/cv"><span class="fa-container text-center mr-2"><i
 												class="fas fa-globe"></i></span>denihida1216.github.io</a></li>
 							</ul>
 						</div>
