--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 					<img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.png" alt="">
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
-							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Deni Hidayat</h1>
+							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">
+								<a href="assets/file/cv.pdf" class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Deni Hidayat</a>
+							</h1>
 							<div class="title mb-3">Full Stack Developer</div>
 							<ul class="list-unstyled">
 								<li class="mb-2"><a href="mailto:denihida1216@gmail.com"><i class="far fa-envelope fa-fw mr-2"
