--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">
-								<a href="assets/file/cv.pdf" class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Deni Hidayat</a>
+								<a href="assets/file/cv_deni_hidayat.pdf" class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Deni Hidayat</a>
 							</h1>
 							<div class="title mb-3">Full Stack Developer</div>
 							<ul class="list-unstyled">
