--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">
-								<a href="assets/file/cv_deni_hidayat.pdf" class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Deni Hidayat</a>
+								Deni Hidayat
 							</h1>
 							<div class="title mb-3">Full Stack Developer</div>
 							<ul class="list-unstyled">
 								<li class="mb-2"><a href="mailto:denihida1216@gmail.com"><i class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>denihida1216@gmail.com</a></li>
-								<li><a href="tel:+6285721661555"><i class="fas fa-mobile-alt fa-fw mr-2"
+								<li class="mb-2"><a href="tel:+6285721661555"><i class="fas fa-mobile-alt fa-fw mr-2"
 											data-fa-transform="grow-6"></i>+6285721661555</a></li>
+								<li><a href="assets/file/cv_deni_hidayat.pdf"><i class="fas fa-file-alt fa-fw mr-2"
+											data-fa-transform="grow-6"></i>Download CV</a></li>
 							</ul>
 						</div>
 						<!--//primary-info-->
@@ -391,18 +393,10 @@
 											</div>
 										</li>
 										<li class="mb-2">
-											<div class="resume-skill-name">Flutter</div>
-											<div class="progress resume-progress">
-												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 30%" aria-valuenow="25" aria-valuemin="0"
-													aria-valuemax="100"></div>
-											</div>
-										</li>
-										<li class="mb-2">
 											<div class="resume-skill-name">JavaScript</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 80%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 85%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
