--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 											data-fa-transform="grow-3"></i>denihida1216@gmail.com</a></li>
 								<li class="mb-2"><a href="tel:+6285721661555"><i class="fas fa-mobile-alt fa-fw mr-2"
 											data-fa-transform="grow-6"></i>+6285721661555</a></li>
-								<li><a href="assets/file/cv_deni_hidayat.pdf"><i class="fas fa-file-alt fa-fw mr-2"
-											data-fa-transform="grow-6"></i>Download CV</a></li>
+								<!-- <li><a href="assets/file/cv_deni_hidayat.pdf"><i class="fas fa-file-alt fa-fw mr-2"
+											data-fa-transform="grow-6"></i>Download CV</a></li> -->
 							</ul>
 						</div>
 						<!--//primary-info-->
@@ -198,7 +198,7 @@
 												<div class="resume-company-name ml-auto">Odoo 12 Community</div>
 											</div>
 											<!--//row-->
-											<div class="resume-position-time">2020</div>
+											<div class="resume-position-time">MAR 2020</div>
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
@@ -231,7 +231,7 @@
 												<div class="resume-company-name ml-auto">Odoo 10 Community</div>
 											</div>
 											<!--//row-->
-											<div class="resume-position-time">2020</div>
+											<div class="resume-position-time">FEB - APR 2020</div>
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
@@ -263,7 +263,7 @@
 												<div class="resume-company-name ml-auto">Odoo 12 Enterprise</div>
 											</div>
 											<!--//row-->
-											<div class="resume-position-time">2019 - 2020</div>
+											<div class="resume-position-time">NOV 2019 - APR 2020</div>
 										</div>
 
 										<!--//resume-timeline-item-header-->
@@ -297,7 +297,7 @@
 												<div class="resume-company-name ml-auto">Odoo 10 Community</div>
 											</div>
 											<!--//row-->
-											<div class="resume-position-time">2018</div>
+											<div class="resume-position-time">MEI - JUL 2018</div>
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
@@ -329,7 +329,7 @@
 												<div class="resume-company-name ml-auto">Odoo 10 Community</div>
 											</div>
 											<!--//row-->
-											<div class="resume-position-time">2018</div>
+											<div class="resume-position-time">JAN - JUL 2018</div>
 										</div>
 										<!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
@@ -385,10 +385,10 @@
 									<h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
 									<ul class="list-unstyled mb-4">
 										<li class="mb-2">
-											<div class="resume-skill-name">React</div>
+											<div class="resume-skill-name">Java</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 20%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 85%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -396,7 +396,7 @@
 											<div class="resume-skill-name">JavaScript</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 85%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 80%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -438,17 +438,16 @@
 									<h4 class="resume-skills-cat font-weight-bold">Lainnya</h4>
 									<ul class="list-inline">
 										<li class="list-inline-item"><span class="badge badge-light">Git</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Unit Testing</span>
-										</li>
-										<li class="list-inline-item"><span class="badge badge-light">Balsamiq</span>
-										</li>
+										<li class="list-inline-item"><span class="badge badge-light">Unit Testing</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Balsamiq</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">UML</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Delphi7</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Codeigniter</span>
-										<li class="list-inline-item"><span class="badge badge-light">Android
-												Studio</span>
-										<li class="list-inline-item"><span class="badge badge-light">Linux</span>
-										<li class="list-inline-item"><span class="badge badge-light">Windows</span>
+										<li class="list-inline-item"><span class="badge badge-light">React JS</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Codeigniter</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Laravel</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Android Studio</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Linux</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Windows</span></li>
 										</li>
 									</ul>
 								</div>
